--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# Site settings
-title: 生命不止，折腾不息
+﻿# Site settings
+title: chris's blog 
 author: MonsterSlayer
 author_avatar: /images/header.jpg
 email: alias@domain.tld
