--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ title: chris's blog
 author: MonsterSlayer
 author_avatar: /images/header.jpg
 email: alias@domain.tld
-description: 生命不止，折腾不息 
-url: "https://dongyado.github.io"
+description: Stay hungry, stay foolish! 
+url: "https://yb2016.github.io"
 domain: "http://dongyado.com"
-github_username: dongyado
-github_site_repo: dongyado/dongyado.github.io
+github_username: YB2016
+github_site_repo: YB2016/YB2016.github.io
 disqus: monsterslayer
 
 
