change blog name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ﻿# Site settings
-title: chris's blog 
+title: Chris's blog且听风吟 
 author: MonsterSlayer
 author_avatar: /images/header.jpg
 email: alias@domain.tld
